<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="TODO"
        android:ems="10"
        android:src="@drawable/midis" />

    <LinearLayout
        android:id="@+id/LinearLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/login_margin_horizontal"
        android:paddingRight="@dimen/login_margin_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--        <TextView
            android:id="@+id/textUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />-->

        <EditText
            android:id="@+id/editUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/txtUsuarioPlaceHolder" />

        <!--        <TextView
            android:id="@+id/textContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />-->

        <EditText
            android:id="@+id/editContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtContrasenaPlaceHolder"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnIniciarSesion" />
    </LinearLayout>

    <TextView
        android:id="@+id/textContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lblVersion" />


</RelativeLayout>
