<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HogarNewFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:id="@+id/ll_HogarNew"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:screenOrientation="portrait"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rlLatitud"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:layout_marginTop="2dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/lblLatitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Latitud"
                android:ems="5"/>
            <TextView
                android:id="@+id/txtLatitud"
                android:layout_toRightOf="@id/lblLatitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Conectado"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rlLongitud"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:layout_marginTop="2dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/lblLongitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Longitud"
                android:ems="5"/>
            <TextView
                android:id="@+id/txtLongitud"
                android:layout_toRightOf="@id/lblLongitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Conectado" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rlnSatelites"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:layout_marginTop="2dp"
            android:padding="5dp">
            <TextView
            android:id="@+id/lblnSats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Satelites"
            android:ems="5"/>
            <TextView
                android:id="@+id/txtnSats"
                android:layout_toRightOf="@id/lblnSats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Conectado"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rlNombre"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:layout_marginTop="2dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/lblFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:text="@string/lbl_Fecha" />

            <EditText
                android:id="@+id/etxt_Fecha"
                android:layout_toRightOf="@id/lblFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rlDireccion"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:layout_marginTop="2dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/lblDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Direccion"
                android:ems="4"/>
            <EditText
                android:id="@+id/etxt_Direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_toRightOf="@id/lblDireccion"/>
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rImagen"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/background_border"
            android:layout_marginTop="2dp"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_TomarFoto"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_border"
                android:ems="10"
                android:text="@string/btn_TomarFoto"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                tools:textStyle="bold" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>




    </LinearLayout>
</FrameLayout>